hw4/myCompilerParser.java
// $ANTLR 3.5 myCompiler.g 2017-06-24 21:26:41

		// import packages here.
		import java.util.HashMap;
		import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myCompilerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT1", "COMMENT2", 
		"EscapeSequence", "FLOAT", "Floating_point_constant", "IF", "INCLUDE_TYPE", 
		"INT", "IandD_TITLE", "Identifier", "Integer_constant", "LIBARY_ID", "STRING_LITERAL", 
		"VOID", "WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", 
		"'<'", "'='", "'>'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int CHAR=4;
	public static final int COMMENT1=5;
	public static final int COMMENT2=6;
	public static final int EscapeSequence=7;
	public static final int FLOAT=8;
	public static final int Floating_point_constant=9;
	public static final int IF=10;
	public static final int INCLUDE_TYPE=11;
	public static final int INT=12;
	public static final int IandD_TITLE=13;
	public static final int Identifier=14;
	public static final int Integer_constant=15;
	public static final int LIBARY_ID=16;
	public static final int STRING_LITERAL=17;
	public static final int VOID=18;
	public static final int WS=19;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCompilerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCompilerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myCompilerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myCompiler.g"; }


			boolean TRACEON = false;
			HashMap<String,Integer> symtab = new HashMap<String,Integer>();
			int labelCount = 0;

			/*
			   public enum TypeInfo {
			   StringConstant,
			   Integer,
			   Float,
			   Unknown,
			   No_Exist,
			   Error
			   }
			 */

			/* attr_type:
			   1 => integer,
			   2 => float,
			   3 => String constant,
			   -1 => do not exist,
			   -2 => error
			 */

			List<String> DataCode = new ArrayList<String>();
			List<String> TextCode = new ArrayList<String>();

			/*t0 ~ t9*/
			public static register reg = new register(0, 6);

			/*
			 * Output prologue.
			 */
			void prologue(String id)
			{
					TextCode.add("\n\n/* Text section */");
					TextCode.add("\t.section .text");
					TextCode.add("\t.globl " + id);
					TextCode.add("\t.type " + id + ",%function");
					TextCode.add(id + ":");
					TextCode.add("\tmov ip, sp");
					TextCode.add("\tstmfd sp!, {r4-r10, fp, ip, lr, pc}");
					TextCode.add("\tsub fp, ip, #4\n");
			}

			/*
			 * Output epilogue.
			 */
			void epilogue()
			{
					/* handle epilogue */
					TextCode.add("\n\tldmea fp, {r4-r10, fp, sp, pc}");
			}


			/* Generate a new label */
			String newLabel()
			{
					labelCount ++;
					return (new String("L")) + Integer.toString(labelCount);
			}


			public List<String> getDataCode()
			{
					return DataCode;
			}

			public List<String> getTextCode()
			{
					return TextCode;
			}



	// $ANTLR start "program"
	// myCompiler.g:88:1: program : inlib declarations functions ;
	public final void program() throws RecognitionException {
		try {
			// myCompiler.g:89:3: ( inlib declarations functions )
			// myCompiler.g:89:3: inlib declarations functions
			{
			pushFollow(FOLLOW_inlib_in_program37);
			inlib();
			state._fsp--;

			pushFollow(FOLLOW_declarations_in_program39);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_functions_in_program41);
			functions();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "inlib"
	// myCompiler.g:92:1: inlib : ( INCLUDE_TYPE '<' LIBARY_ID '>' inlib | INCLUDE_TYPE '<' LIBARY_ID '>' );
	public final void inlib() throws RecognitionException {
		try {
			// myCompiler.g:93:3: ( INCLUDE_TYPE '<' LIBARY_ID '>' inlib | INCLUDE_TYPE '<' LIBARY_ID '>' )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==INCLUDE_TYPE) ) {
				int LA1_1 = input.LA(2);
				if ( (LA1_1==28) ) {
					int LA1_2 = input.LA(3);
					if ( (LA1_2==LIBARY_ID) ) {
						int LA1_3 = input.LA(4);
						if ( (LA1_3==30) ) {
							int LA1_4 = input.LA(5);
							if ( (LA1_4==INCLUDE_TYPE) ) {
								alt1=1;
							}
							else if ( (LA1_4==EOF||LA1_4==CHAR||LA1_4==FLOAT||LA1_4==INT||LA1_4==VOID) ) {
								alt1=2;
							}

							else {
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 1, 4, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 1, 3, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 1, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// myCompiler.g:93:3: INCLUDE_TYPE '<' LIBARY_ID '>' inlib
					{
					match(input,INCLUDE_TYPE,FOLLOW_INCLUDE_TYPE_in_inlib50); 
					match(input,28,FOLLOW_28_in_inlib52); 
					match(input,LIBARY_ID,FOLLOW_LIBARY_ID_in_inlib54); 
					match(input,30,FOLLOW_30_in_inlib56); 
					pushFollow(FOLLOW_inlib_in_inlib58);
					inlib();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:94:3: INCLUDE_TYPE '<' LIBARY_ID '>'
					{
					match(input,INCLUDE_TYPE,FOLLOW_INCLUDE_TYPE_in_inlib63); 
					match(input,28,FOLLOW_28_in_inlib65); 
					match(input,LIBARY_ID,FOLLOW_LIBARY_ID_in_inlib67); 
					match(input,30,FOLLOW_30_in_inlib69); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "inlib"



	// $ANTLR start "functions"
	// myCompiler.g:96:1: functions : ( function functions |);
	public final void functions() throws RecognitionException {
		try {
			// myCompiler.g:97:3: ( function functions |)
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==CHAR||LA2_0==FLOAT||LA2_0==INT||LA2_0==VOID) ) {
				alt2=1;
			}
			else if ( (LA2_0==EOF) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// myCompiler.g:97:3: function functions
					{
					pushFollow(FOLLOW_function_in_functions79);
					function();
					state._fsp--;

					pushFollow(FOLLOW_functions_in_functions81);
					functions();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:99:1: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functions"



	// $ANTLR start "function"
	// myCompiler.g:101:1: function : type Identifier '(' ')' '{' l_declarations statements '}' ;
	public final void function() throws RecognitionException {
		Token Identifier1=null;

		try {
			// myCompiler.g:102:3: ( type Identifier '(' ')' '{' l_declarations statements '}' )
			// myCompiler.g:102:3: type Identifier '(' ')' '{' l_declarations statements '}'
			{
			pushFollow(FOLLOW_type_in_function92);
			type();
			state._fsp--;

			Identifier1=(Token)match(input,Identifier,FOLLOW_Identifier_in_function94); 
			match(input,20,FOLLOW_20_in_function96); 
			match(input,21,FOLLOW_21_in_function98); 
			match(input,31,FOLLOW_31_in_function100); 

					/* output function prologue */
					prologue((Identifier1!=null?Identifier1.getText():null));

			pushFollow(FOLLOW_l_declarations_in_function104);
			l_declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_function106);
			statements();
			state._fsp--;

			match(input,32,FOLLOW_32_in_function108); 

					if (TRACEON)
							System.out.println("type Identifier () {declarations statements}");

					/* output function epilogue */
					epilogue();

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "function"



	// $ANTLR start "declarations"
	// myCompiler.g:119:1: declarations : ( type Identifier ';' declarations |);
	public final void declarations() throws RecognitionException {
		Token Identifier2=null;
		int type3 =0;

		try {
			// myCompiler.g:120:1: ( type Identifier ';' declarations |)
			int alt3=2;
			switch ( input.LA(1) ) {
			case INT:
				{
				int LA3_1 = input.LA(2);
				if ( (LA3_1==Identifier) ) {
					int LA3_6 = input.LA(3);
					if ( (LA3_6==27) ) {
						alt3=1;
					}
					else if ( (LA3_6==20) ) {
						alt3=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 3, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT:
				{
				int LA3_2 = input.LA(2);
				if ( (LA3_2==Identifier) ) {
					int LA3_6 = input.LA(3);
					if ( (LA3_6==27) ) {
						alt3=1;
					}
					else if ( (LA3_6==20) ) {
						alt3=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 3, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case VOID:
				{
				int LA3_3 = input.LA(2);
				if ( (LA3_3==Identifier) ) {
					int LA3_6 = input.LA(3);
					if ( (LA3_6==27) ) {
						alt3=1;
					}
					else if ( (LA3_6==20) ) {
						alt3=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 3, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
				{
				int LA3_4 = input.LA(2);
				if ( (LA3_4==Identifier) ) {
					int LA3_6 = input.LA(3);
					if ( (LA3_6==27) ) {
						alt3=1;
					}
					else if ( (LA3_6==20) ) {
						alt3=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 3, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case EOF:
				{
				alt3=2;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// myCompiler.g:121:1: type Identifier ';' declarations
					{
					pushFollow(FOLLOW_type_in_declarations122);
					type3=type();
					state._fsp--;

					Identifier2=(Token)match(input,Identifier,FOLLOW_Identifier_in_declarations124); 
					match(input,27,FOLLOW_27_in_declarations126); 

							if (TRACEON) System.out.println("declarations: type Identifier : declarations");
							if (symtab.containsKey((Identifier2!=null?Identifier2.getText():null)))
							{
									System.err.println("Type Error: " + Identifier2.getLine() + ": Redeclared identifier.");
							}
							else
							{
									/* Add ID and its attr_type into the symbol table. */
									symtab.put((Identifier2!=null?Identifier2.getText():null), type3);
							}

							/* code generation */
							switch(type3) {
									case 1:
											DataCode.add("\t.type "+ (Identifier2!=null?Identifier2.getText():null) +", %object");
											DataCode.add((Identifier2!=null?Identifier2.getText():null) + ":\n\t.word 0\n");
											break;
									case 2:
											DataCode.add("\t.type "+ (Identifier2!=null?Identifier2.getText():null) +", %object");
											DataCode.add((Identifier2!=null?Identifier2.getText():null) + ":\n\t.double 0\n");
											break;
									default:
							}

					pushFollow(FOLLOW_declarations_in_declarations132);
					declarations();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:148:3: 
					{
					 if (TRACEON) System.out.println("declarations: ");
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "l_declarations"
	// myCompiler.g:152:1: l_declarations : ( type Identifier ';' l_declarations |);
	public final void l_declarations() throws RecognitionException {
		Token Identifier4=null;
		int type5 =0;

		try {
			// myCompiler.g:153:1: ( type Identifier ';' l_declarations |)
			int alt4=2;
			switch ( input.LA(1) ) {
			case INT:
				{
				int LA4_1 = input.LA(2);
				if ( (LA4_1==Identifier) ) {
					int LA4_5 = input.LA(3);
					if ( (LA4_5==27) ) {
						alt4=1;
					}
					else if ( (LA4_5==29) ) {
						alt4=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 5, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT:
				{
				int LA4_2 = input.LA(2);
				if ( (LA4_2==Identifier) ) {
					int LA4_5 = input.LA(3);
					if ( (LA4_5==27) ) {
						alt4=1;
					}
					else if ( (LA4_5==29) ) {
						alt4=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 5, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
			case VOID:
				{
				alt4=1;
				}
				break;
			case IF:
			case Identifier:
			case 32:
				{
				alt4=2;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// myCompiler.g:154:1: type Identifier ';' l_declarations
					{
					pushFollow(FOLLOW_type_in_l_declarations146);
					type5=type();
					state._fsp--;

					Identifier4=(Token)match(input,Identifier,FOLLOW_Identifier_in_l_declarations148); 
					match(input,27,FOLLOW_27_in_l_declarations150); 

							/* If you want to handle local variables, fix it. */
							if (TRACEON) System.out.println("declarations: type Identifier : declarations");
							if (symtab.containsKey((Identifier4!=null?Identifier4.getText():null)))
							{
									System.err.println("Type Error: " + Identifier4.getLine() + ": Redeclared identifier.");
							}
							else
							{
									/* Add ID and its attr_type into the symbol table. */
									symtab.put((Identifier4!=null?Identifier4.getText():null), type5);
							}
							switch(type5) {
									case 1:
											DataCode.add("\t.type "+ (Identifier4!=null?Identifier4.getText():null) +", %object");
											DataCode.add((Identifier4!=null?Identifier4.getText():null) + ":\n\t.word 0\n");
											break;
									case 2:
											DataCode.add("\t.type "+ (Identifier4!=null?Identifier4.getText():null) +", %object");
											DataCode.add((Identifier4!=null?Identifier4.getText():null) + ":\n\t.double 0\n");
											break;
									default:
							}

					pushFollow(FOLLOW_l_declarations_in_l_declarations156);
					l_declarations();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:180:3: 
					{
					 if (TRACEON) System.out.println("declarations: ");
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "l_declarations"



	// $ANTLR start "type"
	// myCompiler.g:184:1: type returns [int attr_type] : ( INT | FLOAT | VOID | CHAR );
	public final int type() throws RecognitionException {
		int attr_type = 0;


		try {
			// myCompiler.g:185:3: ( INT | FLOAT | VOID | CHAR )
			int alt5=4;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt5=1;
				}
				break;
			case FLOAT:
				{
				alt5=2;
				}
				break;
			case VOID:
				{
				alt5=3;
				}
				break;
			case CHAR:
				{
				alt5=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// myCompiler.g:185:3: INT
					{
					match(input,INT,FOLLOW_INT_in_type174); 
					 if (TRACEON) System.out.println("type: INT");  attr_type =1; 
					}
					break;
				case 2 :
					// myCompiler.g:186:3: FLOAT
					{
					match(input,FLOAT,FOLLOW_FLOAT_in_type182); 
					 if (TRACEON) System.out.println("type: FLOAT");  attr_type =2; 
					}
					break;
				case 3 :
					// myCompiler.g:187:3: VOID
					{
					match(input,VOID,FOLLOW_VOID_in_type188); 
					}
					break;
				case 4 :
					// myCompiler.g:188:3: CHAR
					{
					match(input,CHAR,FOLLOW_CHAR_in_type192); 
					}
					break;
